src/mobius.esc/escjava/tags/escjava-2-0a1/ESCTools/Javafe/test/javafe/test/fe/test100/TypeCheck.java
class TypeCheck {

    void doit() {
	Class c = java.lang.nonexistent[].class;   // error: no such class

    }
}
